overlapping navbar bug fix

--- a/frontend/src/pages/attractions/AttractionList.module.scss
+++ b/frontend/src/pages/attractions/AttractionList.module.scss
@@ -2,7 +2,7 @@
     &Container {
         display: flex;
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 5em;
 
     }
 
