--- a/frontend/src/pages/hotel/Hotel.module.scss
+++ b/frontend/src/pages/hotel/Hotel.module.scss
@@ -4,7 +4,7 @@
         align-items: center;
         display: flex;
         flex-direction: column;
-        margin-top: 20px;
+        margin-top: 5em;
     }
 
     &Wrapper {
