--- a/frontend/src/pages/list/List.module.scss
+++ b/frontend/src/pages/list/List.module.scss
@@ -2,7 +2,7 @@
     &Container {
         display: flex;
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 5em;
 
     }
 
@@ -142,7 +142,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-
+    z-index: 1;
 }
 
 .searchWindowButton {
